<resources>
    <string name="app_name">LearnEnglish504</string>

    // my strings
    <string name="per_continue_learning">ادامه یادگیری</string>
    <string name="per_progression_text">شما 20% مسیر را پیموده اید!</string>

    // content description = cd
    <string name="cd_progression_image">user progression image</string>
    <string name="per_lesson_title">لیست درس ها</string>
    <string name="eng_test_sample_word">Abandon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ad">تبلیغات</string>
    <string name="rate">نظردهی</string>
    <string name="information">درباره برنامه</string>
    <string name="icon_504">لوگوی اصلی برنامه</string>

</resources>